# geone

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  requirements.txt
examples/: ex_a_01_image_and_pointset.ipynb  ex_a_02_image2d_rgb.ipynb  ex_a_03_image_interpolation.ipynb  ex_acceptRejectSampler.ipynb  ex_cross_validaton.ipynb  ex_deesseX_01_getting_started.ipynb  ex_deesseX_03.ipynb  ex_deesseX_04.ipynb  ex_deesse_01_basics.ipynb  ex_deesse_02_additional_outputs_and_simulation_paths.ipynb  ex_deesse_02_get_path_and_error.ipynb  ex_deesse_03_search_neigbhorhood.ipynb  ex_deesse_04_continous_sim.ipynb  ex_deesse_04_continuous_sim.ipynb  ex_deesse_05_geom_transformation.ipynb  ex_deesse_06_proba_constraint.ipynb  ex_deesse_07_connectivity_data.ipynb  ex_deesse_08_multivariate_sim.ipynb  ex_deesse_09_multivariate_sim2.ipynb  ex_deesse_10_incomplete_image.ipynb  ex_deesse_11_using_mask.ipynb  ex_deesse_12_multiple_TIs.ipynb  ex_deesse_13_inequality_data.ipynb  ex_deesse_14_rotation3D.ipynb  ex_deesse_15_block_data.ipynb  ex_elementary_cov_model.ipynb  ex_general_multiGaussian.ipynb  ex_geosclassic_1d.ipynb  ex_geosclassic_1d_1.ipynb  ex_geosclassic_1d_2_non_stat_cov.ipynb  ex_geosclassic_1d_non_stat_cov.ipynb  ex_geosclassic_2d.ipynb  ex_geosclassic_2d_1.ipynb  ex_geosclassic_2d_2_non_stat_cov.ipynb  ex_geosclassic_2d_non_stat_cov.ipynb  ex_geosclassic_3d.ipynb  ex_geosclassic_3d_2_non_stat_cov.ipynb  ex_geosclassic_3d_non_stat_cov.ipynb  ex_geosclassic_image_analysis.ipynb  ex_geosclassic_indicator.ipynb  (+23 more)
geone/: __init__.py  _version.py  blockdata.py  covModel.py  customcolors.py  cv_metrics.py  deesseinterface.py  geosclassicinterface.py  grf.py  gslib.py  img.py  imgplot.py  imgplot3d.py  multiGaussian.py  pgs.py  (+2 more)
(+166 files in other folders)
